--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,12 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests", 
-    "demo", 
+    "tests",
+    "demo",
     "src"
-  ]
+  ],
+  "dependencies": {
+    "angular": ">=1.4.0",
+    "angular-bootstrap": "^1.1.2"
+  }
 }
