Add a way to clear current date range selection.

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   ],
   "license": "MIT",
   "keywords": [
-    "anuglar",
+    "angular",
     "ui-bootstrap"
   ],
   "homepage": "https://github.com/pooyaj/angular-ui-bootstrap-daterange-picker",
