--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/pooyaj/angular-ui-bootstrap-daterange-picker.git"
   },
   "keywords": [
-    "anuglar",
+    "angular",
     "ui-bootstrap"
   ],
   "author": "Pooya Jaferian",
